@@ -7,6 +7,8 @@ package mockit.internal.reflection;
 
 import edu.umd.cs.findbugs.annotations.NonNull;
 
+import java.lang.reflect.InvocationTargetException;
+
 @SuppressWarnings("UtilityClassWithoutPrivateConstructor")
 final class ThrowOfCheckedException {
     private static Exception exceptionToThrow;
@@ -15,12 +17,18 @@ final class ThrowOfCheckedException {
         throw exceptionToThrow;
     }
 
-    @SuppressWarnings("deprecation")
     static synchronized void doThrow(@NonNull Exception checkedException) {
         exceptionToThrow = checkedException;
         try {
-            ThrowOfCheckedException.class.newInstance();
-        } catch (InstantiationException | IllegalAccessException ignore) {
+            ThrowOfCheckedException.class.getDeclaredConstructor().newInstance();
+        } catch (InvocationTargetException e) {
+            rethrow(e.getCause());
+        } catch (ReflectiveOperationException ignore) {
         }
+    }
+
+    @SuppressWarnings("unchecked")
+    private static <T extends Throwable> void rethrow(Throwable cause) throws T {
+        throw (T) cause;
     }
 }
