@@ -12,7 +12,6 @@ import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertSame;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-import java.util.Collections;
 import java.util.List;
 
 import mockit.integration.junit5.ExpectedException;
@@ -45,7 +44,7 @@ class ExpectationsWithVarArgsMatchersTest {
          * @return the list
          */
         List<?> complexOperation(Object input1, Object... otherInputs) {
-            return input1 == null ? Collections.emptyList() : asList(otherInputs);
+            return input1 == null ? List.of() : asList(otherInputs);
         }
 
         /**
