@@ -15,7 +15,6 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 import java.lang.reflect.Method;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.Date;
 import java.util.List;
 import java.util.concurrent.Callable;
@@ -90,7 +89,7 @@ public final class MockAnnotationsTest {
         }
 
         List<?> complexOperation(Object input1, Object... otherInputs) {
-            return input1 == null ? Collections.emptyList() : Arrays.asList(otherInputs);
+            return input1 == null ? List.of() : Arrays.asList(otherInputs);
         }
 
         final void simpleOperation(int a, String b, Date c) {
